[package]
name = "mdsycx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = { version = "0.9.2", features = ["serde"] }
quick-xml = "0.25.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.13"
sycamore = "0.8.1"
thiserror = "1.0.35"

[workspace]
members = ["website"]
