[package]
name = "mdsycx-macro"
version = "0.1.0"
edition = "2021"
description = "markdown with Sycamore"
categories = ["gui", "wasm"]
keywords = ["sycamore", "markdown"]
readme = "../README.md"
license = "MIT"
repository = "https://github.com/lukechu10/mdsycx"
homepage = "https://lukechu10.github.io/mdsycx/"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.100", features = ["full"] }
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.43"
quote = "1.0.21"
