[package]
name = "mdsycx-macro"
version = "0.2.0"
edition = "2021"
description = "markdown with Sycamore"
categories = ["gui", "wasm"]
keywords = ["sycamore", "markdown"]
readme = "../README.md"
license = "MIT"
repository = "https://github.com/lukechu10/mdsycx"
homepage = "https://lukechu.dev/mdsycx/"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.87", features = ["full"] }
proc-macro-error2 = "2.0.1"
proc-macro2 = "1.0.89"
quote = "1.0.37"
