[package]
name = "mdsycx"
version = "0.1.0"
edition = "2021"
description = "markdown with Sycamore"
categories = ["gui", "wasm"]

[dependencies]
mdsycx-macro = { path = "../mdsycx-macro" }
pulldown-cmark = { version = "0.9.2", features = ["serde"] }
quick-xml = "0.25.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.13"
sycamore = "0.8.2"
thiserror = "1.0.35"
web-sys = "0.3.60"

[dev-dependencies]
expect-test = "1.4.0"
