[package]
name = "mdsycx"
version = "0.1.0"
edition = "2021"
description = "markdown with Sycamore"
categories = ["gui", "wasm"]
keywords = ["sycamore", "markdown"]
readme = "../README.md"
license = "MIT"
repository = "https://github.com/lukechu10/mdsycx"
homepage = "https://lukechu10.github.io/mdsycx/"

[dependencies]
mdsycx-macro = { path = "../mdsycx-macro", version = "0.1.0" }
pulldown-cmark = { version = "0.12.1", features = ["serde"] }
quick-xml = "0.37.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_yaml = "0.9.13"
sycamore = "0.9.0"
thiserror = "1.0.67"
web-sys = "0.3.72"

[dev-dependencies]
expect-test = "1.5.0"
